option('development',
	type: 'boolean',
	value: false,
	description: 'Produce a development build')

option('official',
	type: 'boolean',
	value: false,
	description: 'Whether this is an official upstream package')

option('backtrace',
    type: 'boolean',
    value: false,
    description: 'Whether the package is built with backtrace support')

# Will be shown in error messages
option('package',
	type: 'string',
	value: 'RPM',
	description: 'The package format being built (e.g. "Flatpak")')

option('distributor',
	type: 'string',
	value: 'vani-tyy1',
	description: 'The package distributor (e.g. "vani-tty1 <rafanangiovanni9@gmail.com>")')